@@ -162,6 +162,7 @@ extern AVInputFormat wsvqa_demuxer;
 extern AVInputFormat wv_demuxer;
 extern AVOutputFormat yuv4mpegpipe_muxer;
 extern AVInputFormat yuv4mpegpipe_demuxer;
+extern AVInputFormat tiertexseq_demuxer;
 
 /* raw.c */
 int pcm_read_seek(AVFormatContext *s,
